# mini-aloha

./: LICENSE  README.md  pyproject.toml
minialoha/scripts/: cross_servo_teleop.py  one_side_teleop.py  real_env.py  record_episodes.py  replay_episodes.py
minialoha/utils/: constants.py  data_utils.py  dynamixel.py  dynamixel_robot.py  hiwonder_robot.py  robot.py  robot_manager.py  robot_recorder.py  robot_to_robot.py  robot_utils.py
tests/: MinialohaExampleDataDict.txt
tests/integration/: manual_adjusting.py  test_data_utils.py  test_dynamixel_robot.py  test_hiwonder_robot.py  test_robot.py  test_teleop.py
