[tool.poetry]
name = "minialoha"
version = "0.1.0"
description = ""
authors = ["Alan Bohannon <alanbohannon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dynamixel-sdk = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-mock = "*"
ipython = "*"
ruff = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
]
